<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/resourceBtn"
        android:layout_width="352dp"
        android:layout_height="195dp"
        android:layout_marginTop="36dp"
        android:layout_marginBottom="9dp"
        android:text="@string/covid_19_resources_and_infomation"
        android:textSize="32sp"
        app:layout_constraintBottom_toTopOf="@+id/gameBtn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/assessmentBtn"
        android:layout_width="352dp"
        android:layout_height="195dp"
        android:layout_marginTop="9dp"
        android:layout_marginBottom="36dp"
        android:text="@string/covid_19_assessment"
        android:textSize="32sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/gameBtn" />

    <Button
        android:id="@+id/gameBtn"
        android:layout_width="352dp"
        android:layout_height="195dp"
        android:layout_marginTop="9dp"
        android:layout_marginBottom="9dp"
        android:text="@string/covid_19_true_or_false_game"
        android:textSize="32sp"
        app:layout_constraintBottom_toTopOf="@+id/assessmentBtn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/resourceBtn" />

</androidx.constraintlayout.widget.ConstraintLayout>